kubernetes/02-app/02-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ampa-2.1
  namespace: kube-system
  labels:
    app: ampa-2.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ampa-2.1
  template:
    metadata:
      labels:
        app: ampa-2.1
    spec:
      volumes:
        - name: xls-data-ampa
          persistentVolumeClaim:
            claimName: nfs-ampa-pvc
      containers:
      - name: ampa
        image: 172.18.1.46:5000/ampa:2.1
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
          - mountPath: /code/xls
            name: xls-data-ampa
