kubernetes/02-app/03-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ampa-3.2
  namespace: kube-system
  labels:
    app: ampa-3.2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ampa-3.2
  template:
    metadata:
      labels:
        app: ampa-3.2
    spec:
      volumes:
        - name: xls-data-ampa
          persistentVolumeClaim:
            claimName: nfs-ampa-pvc
        - name: static-ampa
          persistentVolumeClaim:
            claimName: nfs-static-pvc
      containers:
      - name: ampa
        image: 172.18.1.46:5000/ampa:3.2
        resources:
          requests:
            memory: "50Mi"
            cpu: "250m"
          limits:
            memory: "200Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
          - mountPath: /code/xls
            name: xls-data-ampa
          - mountPath: /code/static
            name: static-ampa
        # livenessProbe:
        #   httpGet:
        #     path: /health/liveness
        #     port: 8000
        #   initialDelaySeconds: 10
        #   periodSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /health/readiness
        #     port: 8000
        #   initialDelaySeconds: 10
        #   periodSeconds: 3
