kubernetes/02-app/04-processing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ampa-processing-2.0
  namespace: kube-system
  labels:
    app: ampa-processing-2.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ampa-processing-2.0
  template:
    metadata:
      labels:
        app: ampa-processing-2.0
    spec:
      volumes:
        - name: xls-data-ampa
          persistentVolumeClaim:
            claimName: nfs-ampa-pvc
      containers:
      - name: ampa-processing
        image: 172.18.1.46:5000/ampa:2.1
        command: ["/code/processingtool.sh"]
        volumeMounts:
          - mountPath: /code/xls
            name: xls-data-ampa
