kubernetes/02-app/08-httpsredirector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpsredirector-1.0
  namespace: kube-system
  labels:
    app: httpsredirector-1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpsredirector-1.0
  template:
    metadata:
      labels:
        app: httpsredirector-1.0
    spec:
      containers:
      - name: sillyhttpsredirector
        image: jprats/sillyhttpsredirector:1.0-armv7l
        resources:
          requests:
            memory: "50Mi"
            cpu: "250m"
          limits:
            memory: "200Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 9000
