kubernetes/02-app/03-ampa-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ampa-15-svc
  namespace: kube-system
spec:
  selector:
    app: ampa-1.5
  ports:
  - name: http
    port: 8000
    targetPort: 8000
