kubernetes/02-app/03-app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ampa-19-svc
  namespace: kube-system
spec:
  selector:
    app: ampa-1.9
  ports:
  - name: http
    port: 8000
    targetPort: 8000
