kubernetes/02-app/04-app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ampa-31-svc
  namespace: kube-system
spec:
  selector:
    app: ampa-3.1
  ports:
  - name: http
    port: 8000
    targetPort: 8000
