kubernetes/02-app/04-ingress-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
spec:
  rules:
  - host: ampa.systemadmin.es
    http:
      paths:
      - backend:
          serviceName: ampa-13-svc
          servicePort: 8000
