kubernetes/02-app/10-ingress-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
spec:
  rules:
  - host: ampa.systemadmin.es
    http:
      paths:
      - backend:
          serviceName: ampa-19-svc
          servicePort: 8000
  - host: static.ampa.systemadmin.es
    http:
      paths:
      - backend:
          serviceName: ampa-static-10-svc
          servicePort: 80
